# C_BDD

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
apps/: CMakeLists.txt  read_elf.cpp  readelf.cpp  tracer.cpp
include/: bdd_elf.hpp  bdd_exclusive_io.hpp  bdd_ptrace.hpp  elf_reader.h  elf_reader.hpp  tracing.hpp
lib/: CMakeLists.txt  bdd_elf.cpp  bdd_exclusive_io.cpp  bdd_ptrace.cpp  bdd_ptrace_breakpoint.cpp  bdd_signals.cpp  bdd_unwind.cpp  breakpoints.cpp  elf_reader.c  elf_reader.cpp  tracing.cpp
samples/: CMakeLists.txt  allocations_program.c  segfault_program.c  stable_program.c  stable_program.cpp
